Consulta de todos los registros de areas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                <span><i class="material-icons fs-16">dashboard</i>Ajustes generales </span>
              </a>
             <ul id="dashboard" class="collapse" aria-labelledby="dashboard" data-parent="#side-nav-accordion">
-              <li> <a href="index.html">Areas</a> </li>
+              <li> <a href="areas.html">Areas</a> </li>
               <li> <a href="pages\dashboard\web-analytics.html"> Turnos </a> </li>
               <li> <a href="pages\dashboard\web-analytics.html"> Trabajadores </a> </li>
             </ul>
