--- a/areas.html
+++ b/areas.html
@@ -133,7 +133,7 @@
                         </div>
                       </div>
                       <button id="btnConsultarArea" class="btn btn-outline-primary mt-4 mb-5 ml-3 d-block w-100 col-md-2 " type="submit">Consultar area</button>               
-                      <button id="btnConsultarTodoAreas" class="btn btn-outline-secondary mt-4 mb-5 ml-3 d-block w-100 col-md-2 " type="submit">Consultar todo</button>
+                      <button id="btnConsultarTodoAreas" class="btn btn-outline-secondary mt-4 mb-5 ml-3 d-block w-100 col-md-2 " type="button">Consultar todo</button>
                     </div>
                   </form>
 
