Creacion del servicio tabajador, para front

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
              </a>
             <ul id="dashboard" class="collapse" aria-labelledby="dashboard" data-parent="#side-nav-accordion">
               <li> <a href="areas.html">Areas</a> </li>
-              <li> <a href="pages\dashboard\web-analytics.html"> Turnos </a> </li>
-              <li> <a href="pages\dashboard\web-analytics.html"> Trabajadores </a> </li>
+              <li> <a href="turnos.html"> Turnos </a> </li>
+              <li> <a href="trabajadores.html"> Trabajadores </a> </li>
             </ul>
         </li>
         <!-- /Charts -->
