Servicio front para la bitacora de accesos

--- a/areas.html
+++ b/areas.html
@@ -54,8 +54,8 @@
              </a>
             <ul id="dashboard" class="collapse" aria-labelledby="dashboard" data-parent="#side-nav-accordion">
               <li> <a href="areas.html">Areas</a> </li>
-              <li> <a href="turnos.html"> Turnos </a> </li>
-              <li> <a href="trabajadores.html"> Trabajadores </a> </li>
+<!--               <li> <a href="turnos.html"> Turnos </a> </li>
+ -->              <li> <a href="trabajadores.html"> Trabajadores </a> </li>
             </ul>
         </li>
 
@@ -65,8 +65,8 @@
               <span><i class="material-icons fs-16">tune</i>Actividad</span>
             </a>
             <ul id="tables" class="collapse" aria-labelledby="tables" data-parent="#side-nav-accordion">
-              <li> <a href="pages\tables\basic-tables.html">Bitacora general de accesos</a> </li>
-              <li> <a href="pages\tables\data-tables.html">Accesos de trabajadores</a> </li>
+              <li> <a href="bitacora-accessos.html">Bitacora general de accesos</a> </li>
+              <li> <a href="accesos-trabajadores.html">Accesos de trabajadores</a> </li>
             </ul>
         </li>
     </ul>
