--- a/bitacora-accessos.html
+++ b/bitacora-accessos.html
@@ -19,6 +19,8 @@
   <link href="assets\css\jquery-ui.min.css" rel="stylesheet">
   <!-- Page Specific CSS (Slick Slider.css) -->
   <link href="assets\css\slick.css" rel="stylesheet">
+  <!-- Page Specific Css (Datatables.css) -->
+  <link href="assets\css\datatables.min.css" rel="stylesheet">
   <!-- Mystic styles -->
   <link href="assets\css\style.css" rel="stylesheet">
   <!-- Favicon -->
@@ -56,7 +58,7 @@
  -->              <li> <a href="trabajadores.html"> Trabajadores </a> </li>
             </ul>
         </li>
-        <!-- /Charts -->
+
         <!-- Tables -->
         <li class="menu-item">
             <a href="#" class="has-chevron" data-toggle="collapse" data-target="#tables" aria-expanded="false" aria-controls="tables">
@@ -70,13 +72,76 @@
     </ul>
   </aside>
 
-  <!-- Main Content -->
+  <!-- CONTENIDO PRINCIPAL -->
   <main class="body-content">
 
     <!-- Body Content Wrapper -->
     <div class="ms-content-wrapper">
       <div class="row">
 
+        <!-- Actividad / Bitacora de accesos -->
+        <div class="col-md-12">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb pl-0">
+              <li class="breadcrumb-item"><a href="index.html"><i class="material-icons">home</i> Actividad</a></li>
+              <li class="breadcrumb-item"><a href="bitacora-accessos.html">Bitacora de accesos</a></li>
+            </ol>
+          </nav>
+        </div>
+
+        <!-- TABS -->
+        <div class="col-md-12">
+          <div class="ms-panel ms-panel-fh">
+            <div class="ms-panel-header">
+              <h6>Procesos</h6>
+            </div>
+            <div class="ms-panel-body">
+              <ul class="nav nav-tabs tabs-bordered d-flex nav-justified mb-4" role="tablist">
+                <li role="presentation"><a href="#tab1" aria-controls="tab1" class="active show" role="tab" data-toggle="tab"> Consultar bitacora </a></li>
+                <li role="presentation"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab"> Consultar accesos de trabajadores </a></li>
+              </ul>
+              <div class="tab-content">
+                <!-- CONSULTAR -->
+                <div role="tabpanel" class="tab-pane active show fade in" id="tab1">
+                  <form class="needs-validation" novalidate="">
+                    <div class="form-row">
+                      <button id="btnConsultarBitacoraAccesos" class="btn btn-outline-secondary mt-4 mb-5 ml-3 d-block w-100 col-md-2 " type="button">Consultar bitacora</button>
+                    </div>
+                  </form>
+                  <!-- MENSAJE DE ERROR -->
+                  <div id="msjErrorBitacoras" role="alert">
+                  </div>
+                  <!-- TABLA DE CONSULTA -->
+                  <div class="table-responsive">
+                    <table id="bitacora-accesos-table" class="table table-striped thead-primary w-100"></table>
+                  </div>
+                </div>
+
+                <!-- CONSULTAR TRABAJADOR-->
+                <div role="tabpanel" class="tab-pane fade" id="tab2">
+                  <form class="needs-validation" novalidate="">
+                    <div class="form-row">
+                      <div class="col-md-6 mb-3">
+                        <label for="idTrabajadorConsultar">Id del trabajador</label>
+                        <div class="input-group">
+                          <input type="text" class="form-control" id="idTrabajadorConsultar" placeholder="Id del trabajador" value="" required="">
+                        </div>
+                      </div>
+                      <button id="btnConsultarActividadTrabajador" class="btn btn-outline-secondary mt-4 mb-5 ml-3 d-block w-100 col-md-2 " type="button">Consultar actividad</button>               
+                      <button id="btnResetBuscarTrabajador" class="ms-btn-icon btn-dark mt-4 mb-4 ml-3 d-block w-100 col-md-1 " type="button"><i class="flaticon-reuse"></i></button>                      </div>
+                  </form>
+                  <!-- MENSAJE DE ERROR -->
+                  <div id="msjErrorAreas" role="alert">
+                  </div>
+                  <!-- TABLA DE CONSULTA -->
+                  <div class="table-responsive">
+                    <table id="accesos-trabajador-table" class="table table-striped thead-primary w-100"></table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -95,16 +160,24 @@
   <script src="assets\js\slick.min.js"> </script>
   <script src="assets\js\moment.js"> </script>
   <script src="assets\js\jquery.webticker.min.js"> </script>
-  <script src="assets\js\Chart.bundle.min.js"> </script>
-  <script src="assets\js\Chart.Financial.js"> </script>
-  <script src="assets\js\cryptocurrency.js"> </script>
-  <!-- Page Specific Scripts Finish -->
+  <script src="assets\js\datatables.min.js"> </script>
+<!--   <script src="assets\js\data-tables.js"> </script>
+ -->  <!-- Page Specific Scripts Finish -->
 
   <!-- Mystic core JavaScript -->
   <script src="assets\js\framework.js"></script>
 
   <!-- Settings -->
   <script src="assets\js\settings.js"></script>
+
+
+  <!-- SCRIPTS DE RFID -->
+  <!-- Axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!--Conexion-->  
+  <script src="scripts/conexionAPI.js"></script>
+  <!--Servicio para bitacora de accesos-->  
+  <script src="scripts/bitacora-accesos-service.js"></script>
 
 </body>
 
